<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditViewF"
    android:gravity="top"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:paddingBottom="45dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="10dp"
                android:id="@+id/start_daye"
                android:layout_weight="15"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/data_pocz_tkowa_dd_mm_rrrr"
                />
            <EditText
                android:padding="10dp"
                android:layout_weight="15"
                android:textSize="14sp"
                android:id="@+id/finish_daye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/data_ko_cowa_dd_mm_rrrr"
                />
            <EditText
                android:padding="10dp"
                android:layout_weight="15"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/houre"
                android:hint="@string/godzina_hh_mm_ss"
                />

            <EditText
                android:padding="10dp"
                android:layout_weight="15"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/authore"
                android:hint="@string/autor"
                />

            <EditText
                android:padding="10dp"
                android:layout_weight="15"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/taskNamee"
                android:hint="@string/nazwa_wydarzenia"
                />

            <EditText
                android:padding="10dp"
                android:layout_weight="15"
                android:id="@+id/descriptionTaske"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/opis_wydarzenia"
                />

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:text="Zaktualizuj rekord"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>